# MiaooAim_fork

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COURSE_TABLE_README.md  LICENSE  Makefile  README.md  pyproject.toml  使用说明书.md  文档索引.md
docs/: fonts.md  gitee-about.md
hardware/: BOM.md  BOM_ACTUAL.md
main/: CMakeLists.txt  app_main.c  battery_mon.c  battery_mon.h  button.c  button.h  calendar_display.c  canvas_board.c  clock_display.c  clock_display.h  codex_quota.c  codex_quota.h  countdown.c  countdown.h  device_identity.c  device_identity.h  display_mode.c  display_mode.h  epd.h  epd_stub.c  fb_render.c  fb_render.h  font_data.h  font_ext.c  font_ext.h  http_app.c  http_app.h  http_internal.h  idf_component.yml  image_convert.c  lunar.c  lunar.h  message_board.c  message_board.h  nvs_utils.c  nvs_utils.h  power_mgr.c  power_mgr.h  scheduler.c  spiffs_mount.h  (+9 more)
release/: README.md
test/: README.md
test/host/: Makefile  sdkconfig.h  test_lunar_host.c  unity.h
test/lunar/: Makefile
tools/: detect_port.sh  download_fonts.py  fetch_open_fonts.py  font_extra_chars.txt  gen_city_excel.py  gen_ext_font.py  gen_font.py  pick_font.py  preview_ext_font.py  update_gitee_about.ps1
web/: app.css  board.html  calendar.html  clock.html  codex.html  config.html  countdown.html  gallery.html  index.html  message.html  timetable.html  todo.html  weather.html
